// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode acp --help 1`] = `
"opencode acp

start ACP (Agent Client Protocol) server

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
      --port         port to listen on                                          [número] [padrão: 0]
      --hostname     hostname to listen on                            [string] [padrão: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [booleano] [padrão: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                 [string] [padrão: "opencode.local"]
      --cors         additional domains to allow for CORS                       [array] [padrão: []]
      --cwd          working directory                       [string] [padrão: "<HOME>"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"opencode mcp

manage MCP (Model Context Protocol) servers

Comandos:
  opencode mcp add [name]     add an MCP server
  opencode mcp list           list MCP servers and their status                      [sinônimos: ls]
  opencode mcp auth [name]    authenticate with an OAuth-enabled MCP server
  opencode mcp logout [name]  remove OAuth credentials for an MCP server
  opencode mcp debug <name>   debug OAuth connection for an MCP server

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"opencode attach <url>

attach to a running opencode server

Posicionais:
  url  http://localhost:4096                                                  [string] [obrigatório]

Opções:
  -h, --help          show help                                                           [booleano]
  -v, --version       show version number                                                 [booleano]
      --print-logs    print logs to stderr                                                [booleano]
      --log-level     log level                  [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                        [booleano]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                           [booleano]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session) [booleano]
  -p, --password      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --mini          start the minimal interactive interface             [booleano] [padrão: false]
      --no-replay     disable mini session history replay on resume and after resize      [booleano]
      --replay-limit  cap visible mini replay to the newest N messages                      [número]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"opencode run [message..]

run opencode with a message

Posicionais:
  message  message to send                                                      [array] [padrão: []]

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                            [booleano]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session)[booleano]
      --share        share the session                                                    [booleano]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                            [string] [opções: "default", "json"] [padrão: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running opencode server (e.g., http://localhost:4096)      [string]
  -p, --password     basic auth password (defaults to OPENCODE_SERVER_PASSWORD)             [string]
  -u, --username     basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [número]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                 [booleano]
  -i, --interactive  run in direct interactive split-footer mode          [booleano] [padrão: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [booleano] [padrão: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"opencode debug

debugging and troubleshooting tools

Comandos:
  opencode debug config        show resolved configuration
  opencode debug lsp           LSP debugging utilities
  opencode debug rg            ripgrep debugging utilities
  opencode debug file          file system debugging utilities
  opencode debug scrap         list all known projects
  opencode debug skill         list all available skills
  opencode debug snapshot      snapshot debugging utilities
  opencode debug startup       print startup timing
  opencode debug agent <name>  show agent configuration details
  opencode debug v2            debug v2 catalog and built-in plugins
  opencode debug info          show debug information
  opencode debug paths         show global paths (data, config, cache, state)
  opencode debug wait          wait indefinitely (for debugging)

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"opencode providers

manage AI providers and credentials

Comandos:
  opencode providers list               list providers and credentials               [sinônimos: ls]
  opencode providers login [url]        log in to a provider
  opencode providers logout [provider]  log out from a configured provider

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"opencode agent

manage agents

Comandos:
  opencode agent create  create a new agent
  opencode agent list    list all available agents

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"opencode upgrade [target]

upgrade opencode to the latest or a specific version

Posicionais:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
  -m, --method      installation method to use
                           [string] [opções: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"opencode uninstall

uninstall opencode and remove all related files

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
  -c, --keep-config  keep configuration files                             [booleano] [padrão: false]
  -d, --keep-data    keep session data and snapshots                      [booleano] [padrão: false]
      --dry-run      show what would be removed without removing          [booleano] [padrão: false]
  -f, --force        skip confirmation prompts                            [booleano] [padrão: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"opencode serve

starts a headless opencode server

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
      --port         port to listen on                                          [número] [padrão: 0]
      --hostname     hostname to listen on                            [string] [padrão: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [booleano] [padrão: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                 [string] [padrão: "opencode.local"]
      --cors         additional domains to allow for CORS                       [array] [padrão: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"opencode web

start opencode server and open web interface

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
      --port         port to listen on                                          [número] [padrão: 0]
      --hostname     hostname to listen on                            [string] [padrão: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [booleano] [padrão: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                 [string] [padrão: "opencode.local"]
      --cors         additional domains to allow for CORS                       [array] [padrão: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"opencode models [provider]

list all available models

Posicionais:
  provider  provider ID to filter models by                                                 [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --verbose     use more verbose model output (includes metadata like costs)          [booleano]
      --refresh     refresh the models cache from models.dev                              [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"opencode stats

show token usage and cost statistics

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --days        show stats for the last N days (default: all time)                      [número]
      --tools       number of tools to show (default: all)                                  [número]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"opencode export [sessionID]

export session data as JSON

Posicionais:
  sessionID  session id to export                                                           [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --sanitize    redact sensitive transcript and file data                             [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"opencode import <file>

import session data from JSON file or URL

Posicionais:
  file  path to JSON file or share URL                                        [string] [obrigatório]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"opencode github

manage GitHub agent

Comandos:
  opencode github install  install the GitHub agent
  opencode github run      run the GitHub agent

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"opencode pr <number>

fetch and checkout a GitHub PR branch, then run opencode

Posicionais:
  number  PR number to checkout                                               [número] [obrigatório]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"opencode session

manage sessions

Comandos:
  opencode session list                list sessions
  opencode session delete <sessionID>  delete a session

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode sessions --help 1`] = `
"opencode sessions [project]

browse sessions across all projects

Posicionais:
  project  path to start opencode in                                                        [string]

Opções:
  -h, --help         show help                                                            [booleano]
  -v, --version      show version number                                                  [booleano]
      --print-logs   print logs to stderr                                                 [booleano]
      --log-level    log level                   [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                         [booleano]
      --port         port to listen on                                          [número] [padrão: 0]
      --hostname     hostname to listen on                            [string] [padrão: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [booleano] [padrão: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                 [string] [padrão: "opencode.local"]
      --cors         additional domains to allow for CORS                       [array] [padrão: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"opencode plugin <module>

install plugin and update config

Posicionais:
  module  npm module name                                                     [string] [obrigatório]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
  -g, --global      install in global config                              [booleano] [padrão: false]
  -f, --force       replace existing plugin version                       [booleano] [padrão: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"opencode db

database tools

Comandos:
  opencode db [query]     open an interactive sqlite3 shell or run a query                 [default]
  opencode db path        print the database path

Posicionais:
  query  SQL query to execute                                                               [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --format      Output format                   [string] [opções: "json", "tsv"] [padrão: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"opencode mcp list

list MCP servers and their status

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"opencode mcp add [name]

add an MCP server

Posicionais:
  name  name of the MCP server                                                              [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"opencode mcp auth [name]

authenticate with an OAuth-enabled MCP server

Comandos:
  opencode mcp auth list  list OAuth-capable MCP servers and their auth status       [sinônimos: ls]

Posicionais:
  name  name of the MCP server                                                              [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"opencode mcp logout [name]

remove OAuth credentials for an MCP server

Posicionais:
  name  name of the MCP server                                                              [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"opencode providers list

list providers and credentials

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"opencode providers login [url]

log in to a provider

Posicionais:
  url  opencode auth provider                                                               [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"opencode providers logout [provider]

log out from a configured provider

Posicionais:
  provider  provider id or name to log out from                                             [string]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"opencode agent create

create a new agent

Opções:
  -h, --help                  show help                                                   [booleano]
  -v, --version               show version number                                         [booleano]
      --print-logs            print logs to stderr                                        [booleano]
      --log-level             log level          [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                [booleano]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode             [string] [opções: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"opencode agent list

list all available agents

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"opencode session list

list sessions

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
  -n, --max-count   limit to N most recent sessions                                         [número]
      --format      output format               [string] [opções: "table", "json"] [padrão: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"opencode session delete <sessionID>

delete a session

Posicionais:
  sessionID  session ID to delete                                             [string] [obrigatório]

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"opencode github install

install the GitHub agent

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"opencode github run

run the GitHub agent

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"opencode db path

print the database path

Opções:
  -h, --help        show help                                                             [booleano]
  -v, --version     show version number                                                   [booleano]
      --print-logs  print logs to stderr                                                  [booleano]
      --log-level   log level                    [string] [opções: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                          [booleano]"
`;
